manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-platform
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: k8s-platform
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
